--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="header-top">
-            <img src="madison-variety-logo.png" alt="Madison Variety Logo" class="logo">
+            <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
                 <p>Mon - Fri: 9:00 AM - 7:00 PM</p>
