review section done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Madison Variety</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
@@ -20,7 +22,7 @@
                 <p>Sun: Closed</p>
             </div>
             <div class="contact-info">
-                <p>For more inquiries, call us: 732-333-0226</p>
+                <p>For more inquiries, call us: +1 (732) 333-0226</p>
                 <p>Info@MadisonVariety.com</p>
                 <p>30 W Main St, Freehold, NJ 07728</p>
             </div>
@@ -55,11 +57,8 @@
                 allowfullscreen="" 
                 loading="lazy">
             </iframe>
-        
+        </div>
     </section>
-
-
-
 
     <main>
         <!-- Reviews Section -->
@@ -77,32 +76,87 @@
                     <!-- Review Card 1 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="path/to/reviewer1.jpg" alt="Reviewer" class="reviewer-image">
+                            <div class="reviewer-image-initials jones-initials">J</div>
                             <div class="reviewer-info">
-                                <h3 class="reviewer-name">John Doe</h3>
-                                <span class="review-date">March 15, 2024</span>
+                                <h3 class="reviewer-name">Jones Rasmussen</h3>
+                                <span class="review-count">Local Guide   ·   183 reviews   ·   17 photos</span>
+                                <span class="review-date">6 years ago</span>
                             </div>
                         </div>
                         <div class="review-rating">★★★★★</div>
-                        <p class="review-content">"Amazing service! The staff was incredibly friendly and helpful. I'll definitely be coming back!"</p>
-                        <span class="review-category">Service</span>
+                        <p class="review-content">"You have a little bit of everything bus tickets check cashing snacks smokes coffeebar and friendly people"</p>
                     </div>
 
                     <!-- Review Card 2 -->
+                    <!-- Review Card 2 -->
+<div class="review-card">
+    <div class="review-header">
+        <div class="reviewer-image-initials kary-initials">K</div>
+        <div class="reviewer-info">
+            <h3 class="reviewer-name">Kary Deluga</h3>
+            <span class="review-count">2 reviews</span>
+            <span class="review-date">4 years ago</span>
+        </div>
+    </div>
+    <div class="review-rating">★★★★★</div>
+    <p class="review-content">"What a lovely store and the owners are so friendly it's a family run store and they always have whatever you need."</p>
+</div>
+
+                    <!-- Review Card 3 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="path/to/reviewer2.jpg" alt="Reviewer" class="reviewer-image">
+                            <div class="reviewer-image-initials thomas-initials">T</div>
                             <div class="reviewer-info">
-                                <h3 class="reviewer-name">Jane Smith</h3>
-                                <span class="review-date">March 10, 2024</span>
+                                <h3 class="reviewer-name">Thomas Maindelle</h3>
+                                <span class="review-count">4 reviews</span>
+                                <span class="review-date">5 years ago</span>
                             </div>
                         </div>
                         <div class="review-rating">★★★★★</div>
-                        <p class="review-content">"The quality of products is outstanding. Great selection and competitive prices!"</p>
-                        <span class="review-category">Products</span>
+                        <p class="review-content">"Great family run business been going there 40+ years A+"</p>
                     </div>
 
-                    <!-- Add more review cards as needed -->
+                    <!-- Review Card 4 -->
+                    <div class="review-card">
+                        <div class="review-header">
+                            <img src="pfp/james.png" alt="Reviewer" class="reviewer-image">
+                            <div class="reviewer-info">
+                                <h3 class="reviewer-name">James Applegate</h3>
+                                <span class="review-count">5 reviews</span>
+                                <span class="review-date">10 years ago</span>
+                            </div>
+                        </div>
+                        <div class="review-rating">★★★★★</div>
+                        <p class="review-content">"Madison Variety Discount Store sells monthly, weekly or round trip bus tickets to New York, Jersey City and Academy going to Wall Street. The store also sells Lottery and other merchandise for customers, best coffee in town always fresh."</p>
+                    </div>
+
+                    <!-- Review Card 5 -->
+                    <div class="review-card">
+                        <div class="review-header">
+                            <div class="reviewer-image-initials adam-initials">A</div>
+                            <div class="reviewer-info">
+                                <h3 class="reviewer-name">Adam Valvo</h3>
+                                <span class="review-count">72 reviews    ·   24 photos</span>
+                                <span class="review-date">7 years ago</span>
+                            </div>
+                        </div>
+                        <div class="review-rating">★★★★★</div>
+                        <p class="review-content">"Great store"</p>
+                    </div>
+
+                    <!-- Review Card 6 -->
+                    <div class="review-card">
+                        <div class="review-header">
+                            <div class="reviewer-image-initials lk-initials">L</div>
+                            <div class="reviewer-info">
+                                <h3 class="reviewer-name">L K</h3>
+                                <span class="review-count">127 reviews    ·     3 photos</span>
+                                <span class="review-date">6 years ago</span>
+                            </div>
+                        </div>
+                        <div class="review-rating">★★★★★</div>
+                        <p class="review-content">"Great place to pick up lotto bus tickets and train tickets"</p>
+                    </div>
                 </div>
             </div>
 
@@ -111,6 +165,9 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+               
             </div>
         </section>
     </main>
@@ -119,6 +176,5 @@
         <p>© 2025 Madison Variety. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
-
 </body>
 </html>
