--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
-                <p>Mon - Fri: 9:00 AM - 7:00 PM</p>
-                <p>Sat: 9:00 AM - 4:00 PM</p>
+                <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
+                <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
                 <p>Sun: Closed</p>
             </div>
             <div class="contact-info">
