our story worked on very dilligently

--- a/index.html
+++ b/index.html
@@ -12,38 +12,39 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <div class="header-top">
-            <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
-            <div class="hours-info">
-                <p><strong>Store Hours:</strong></p>
-                <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
-                <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
-                <p>Sun: Closed</p>
+    <body>
+        <header>
+            <div class="header-top">
+                <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
+                <div class="hours-info">
+                    <p><strong>Store Hours:</strong></p>
+                    <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
+                    <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
+                    <p>Sun: Closed</p>
+                </div>
+                <div class="contact-info">
+                    <p>For more inquiries, call us: +1 (732) 679-4181</p>
+                    <p>Info@MadisonVariety.com</p>
+                    <p><a href="https://maps.app.goo.gl/2qhaExNmzNM9ZwaJ8" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
+                </div>
             </div>
-            <div class="contact-info">
-                <p>For more inquiries, call us: +1 (732) 333-0226</p>
-                <p>Info@MadisonVariety.com</p>
-                <p>30 W Main St, Freehold, NJ 07728</p>
+            <div class="date">
+                <p id="clock">March 07, 2025 | 10:37:31</p>
             </div>
-        </div>
-        <div class="date">
-            <p id="clock">March 07, 2025 | 10:37:31</p>
-        </div>
-        
-        <!-- Text-Based Navbar -->
-        <nav class="text-nav">
-            <a href="our-story.html" class="nav-item">Our Story</a>
-            <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-            <a href="lottery.html" class="nav-item">Lottery</a>
-            <a href="work-supplies.html" class="nav-item">Work Supplies</a>
-            <a href="social-area.html" class="nav-item">Social Area</a>
-            <a href="snacks.html" class="nav-item">Snacks</a>
-            <a href="drinks.html" class="nav-item">Drinks</a>
-            <a href="nicotine-products.html" class="nav-item">Nicotine Products</a>
-            <a href="stamps.html" class="nav-item">Stamps</a>
-        </nav>
-    </header>
+            <header>
+                <nav class="text-nav">
+                    <a href="ourstory.html" class="nav-item">Our Story</a>
+                    <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
+                    <a href="lottery.html" class="nav-item">Lottery</a>
+                    <a href="work-supplies.html" class="nav-item">Work Supplies</a>
+                    <a href="social-area.html" class="nav-item">Social Area</a>
+                    <a href="snacks.html" class="nav-item">Snacks</a>
+                    <a href="drinks.html" class="nav-item">Drinks</a>
+                    <a href="nicotine-products.html" class="nav-item">Nicotine Products</a>
+                    <a href="stamps.html" class="nav-item">Stamps</a>
+                </nav>
+            </header>
+        </header>
 
     <section class="location-section">
         <h2>Visit Us</h2>
