our story pictures added more

--- a/ourstory.html
+++ b/ourstory.html
@@ -18,7 +18,9 @@
 <body>
     <header>
         <div class="header-top">
-            <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
+            <a href="index.html">
+                <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
+            </a>
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
                 <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
@@ -54,7 +56,7 @@
 
         <div class="timeline">
             <div class="timeline-item">
-                <img src="1976.jpg" alt="Madison Variety in 1980">
+                <img src="pfp/madison variety.png" alt="Madison Variety in 1980">
                 <h3>1976</h3>
                 <p>Madison Variety first opened its doors, originally at <a href="https://maps.app.goo.gl/2qhaExNmzNM9ZwaJ8" target="_blank">2500 Route 9 South, Old Bridge</a>, now an AutoZone!</p>
 
@@ -67,10 +69,9 @@
             </div>
 
             <div class="timeline-item">
-                <img src="store-2010.jpg" alt="Madison Variety in 2010">
-                <h3>2010</h3>
-                <p>Celebrating 30 years of service, we renovated our store to better serve our growing customer base
-                    while maintaining our classic charm.</p>
+                <img src="pfp/dream.png" alt="Madison Variety in 2010">
+                <h3>2008</h3>
+                <p>Edward’s daughter-in-law, Galit, took over the store next door and transformed it into Dream Dresses, a boutique specializing in elegant gowns for proms, weddings, and special occasions. <p>
             </div>
 
             <div class="timeline-item">
@@ -97,11 +98,11 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 
 </html>
