maybe idk maybe

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="header-top">
-                <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
+                <img src="/pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
                 <div class="hours-info">
                     <p><strong>Store Hours:</strong></p>
                     <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
@@ -33,7 +33,7 @@
             </div>
             <header>
                 <nav class="text-nav">
-                    <a href="ourstory.html" class="nav-item">Our Story</a>
+                    <a href="ourstory/ourstory.html" class="nav-item">Our Story</a>
                     <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
                     <a href="lottery.html" class="nav-item">Lottery</a>
                     <a href="work-supplies.html" class="nav-item">Work Supplies</a>
