--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -18,8 +18,8 @@
 <body>
     <header>
         <div class="header-top">
-            <a href="index.html">
-                <img src="newmadison.png" alt="Madison Variety Logo" class="logo">
+            <a href="/index.html">
+                <img src="/pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
@@ -40,7 +40,7 @@
             <nav class="text-nav">
                 <a href="ourstory.html" class="nav-item">Our Story</a>
                 <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-                <a href="lottery.html" class="nav-item">Lottery</a>
+                <a href="/lottery.html" class="nav-item">Lottery</a>
                 <a href="work-supplies.html" class="nav-item">Work Supplies</a>
                 <a href="social-area.html" class="nav-item">Social Area</a>
                 <a href="snacks.html" class="nav-item">Snacks</a>
@@ -56,20 +56,20 @@
 
         <div class="timeline">
             <div class="timeline-item">
-                <img src="pfp/madison variety.png" alt="Madison Variety in 1980">
+                <img src="/pfp/madison variety.png" alt="Madison Variety in 1980">
                 <h3>1976</h3>
                 <p>Madison Variety first opened its doors, originally at <a href="https://maps.app.goo.gl/2qhaExNmzNM9ZwaJ8" target="_blank">2500 Route 9 South, Old Bridge</a>, now an AutoZone!</p>
 
             </div>
 
             <div class="timeline-item">
-                <img src="pfp/kids.jpg" alt="Madison Variety in 1995">
+                <img src="/pfp/kids.jpg" alt="Madison Variety in 1995">
                 <h3>1996</h3>
                 <p>We moved to our current location at <a href="https://maps.app.goo.gl/Wj5Vc1TBNg3GRHPy9" target="_blank">3062 US-9, Old Bridge, NJ 08857</a>. Starting a new chapter in our journey.</a></p>
             </div>
 
             <div class="timeline-item">
-                <img src="pfp/dream.png" alt="Madison Variety in 2010">
+                <img src="/pfp/dream.png" alt="Madison Variety in 2010">
                 <h3>2008</h3>
                 <p>Edward’s daughter-in-law, Galit, took over the store next door and transformed it into Dream Dresses, a boutique specializing in elegant gowns for proms, weddings, and special occasions. <p>
             </div>
@@ -92,7 +92,7 @@
                     <p>Eventually, Gabe Rosenstraus took the reins, carrying on his father’s vision and ensuring that the store continued to serve Freehold with the same warmth and reliability that had defined it from the start. We’re proud of our journey and grateful for the continued support of our community. As we look to the future, we remain committed to serving Freehold with the same dedication and variety that has made Madison Variety a part of local history for generations.</p>
                 </div>
                 <div class="image-container">
-                    <img src="pfp/rosenstraus.jpg" alt="The Rosenstraus Family">
+                    <img src="/pfp/rosenstraus.jpg" alt="The Rosenstraus Family">
                     <p class="caption">The Rosenstraus Family, founders of Madison Variety</p>
                 </div>
             </div>
