lottery images addded and  api attemtped but failed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
 </head>
@@ -28,14 +29,17 @@
                     <p><a href="https://maps.app.goo.gl/2qhaExNmzNM9ZwaJ8" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
                 </div>
             </div>
-            <div class="date">
-                <p id="clock">March 07, 2025 | 10:37:31</p>
-            </div>
+            <main id="app">
+                <div class="date">
+                    <p id="clock">March 25, 2025 | 11:52:31</p>
+                </div>
+            </main>
+            
             <header>
                 <nav class="text-nav">
-                    <a href="ourstory/ourstory.html" class="nav-item">Our Story</a>
+                    <a href="/ourstory/ourstory.html" class="nav-item">Our Story</a>
                     <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-                    <a href="lottery.html" class="nav-item">Lottery</a>
+                    <a href="/lottery/lottery.html" class="nav-item">Lottery</a>
                     <a href="work-supplies.html" class="nav-item">Work Supplies</a>
                     <a href="social-area.html" class="nav-item">Social Area</a>
                     <a href="snacks.html" class="nav-item">Snacks</a>
@@ -176,6 +180,6 @@
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="/lottery/lottery.js"></script>
 </body>
 </html>
