--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -9,6 +9,8 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
     <link rel="stylesheet" href="ourstory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
@@ -38,9 +40,9 @@
         </div>
         <header>
             <nav class="text-nav">
-                <a href="ourstory.html" class="nav-item">Our Story</a>
+                <a href="our-story.html" class="nav-item">Our Story</a>
                 <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-                <a href="/lottery.html" class="nav-item">Lottery</a>
+                <a href="/lottery/lottery.html" class="nav-item">Lottery</a>
                 <a href="work-supplies.html" class="nav-item">Work Supplies</a>
                 <a href="social-area.html" class="nav-item">Social Area</a>
                 <a href="snacks.html" class="nav-item">Snacks</a>
@@ -98,7 +100,7 @@
             </div>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="/lottery/lottery.js"></script>
 
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
