--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
             <header>
                 <nav class="text-nav">
-                    <a href="/ourstory/ourstory.html" class="nav-item">Our Story</a>
+                    <a href="\ourstory\ourstory.html" class="nav-item">Our Story</a>
                     <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
                     <a href="/lottery/lottery.html" class="nav-item">Lottery</a>
                     <a href="work-supplies.html" class="nav-item">Work Supplies</a>
