--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -110,6 +110,11 @@
             <img src="/pfp/cash.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash 5 </span>
           </a>
+       
+          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+            <img src="/pfp/pick 6.png" alt="New Jersey Lottery Logo">
+            <span class="balls"> Pick 6</span>
+          </a>
           <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
             <img src="/pfp/cash4.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash 4 Life </span>
@@ -118,9 +123,15 @@
             <img src="/pfp/cashpop.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash Pop </span>
           </a>
-          <a href="#" class="lottery-box" target="_blank">
-            <span>Cash4Life</span>
+          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+            <img src="/pfp/fast play.png" alt="New Jersey Lottery Logo">
+            <span class="balls"> Fast Play </span>
           </a>
+          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+            <img src="/pfp/quickdraw.png" alt="New Jersey Lottery Logo">
+            <span class="balls"> Fast Play </span>
+          </a>
+         
         </div>
       </section>
   </main>
