--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -22,7 +22,7 @@
   <header>
     <div class="header-top">
       <a href="/index.html">
-        <img src="/pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+        <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
       </a>
       <div class="hours-info">
         <p><strong>Store Hours:</strong></p>
@@ -79,10 +79,10 @@
             🎉 6/29/2024: $10,000 Big Winner! 🎉
           </div>
           <div class="flipboard-item">
-            🎉 JOHN SMITH WON $5,000 IN OUR LOTTERY! 🎉
+            🎉 5/26/2024: $5,000 Big Winner! 🎉
           </div>
           <div class="flipboard-item">
-            🎉 MARY JOHNSON WON $20,000! 🎉
+            🎉 6/10/2024: $2,500 Big Winner! 🎉
           </div>
         </div>
       </div>
@@ -98,38 +98,38 @@
             <img src="/pfp/mega-removebg-preview.png" alt="Mega Millions Logo">
             <span class="balls">Mega Millions</span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/pick3.html" class="lottery-box" target="_blank">
             <img src="/pfp/images-removebg-preview.png" alt="New Jersey Lottery Logo">
             <span class="balls">Pick 3 </span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/pick4.html" class="lottery-box" target="_blank">
             <img src="/pfp/pick 4.webp" alt="New Jersey Lottery Logo">
             <span class="balls">Pick 4 </span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/jerseycash.html" class="lottery-box" target="_blank">
             <img src="/pfp/cash.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash 5 </span>
           </a>
        
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/pick6lotto.html" class="lottery-box" target="_blank">
             <img src="/pfp/pick 6.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Pick 6</span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/cash4life.html" class="lottery-box" target="_blank">
             <img src="/pfp/cash4.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash 4 Life </span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/cashpop.html" class="lottery-box" target="_blank">
             <img src="/pfp/cashpop.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash Pop </span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/fastplay.html#tab-active" class="lottery-box" target="_blank">
             <img src="/pfp/fast play.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Fast Play </span>
           </a>
-          <a href="https://www.njlottery.com/" class="lottery-box" target="_blank">
+          <a href="https://www.njlottery.com/en-us/drawgames/quickDraw.html" class="lottery-box" target="_blank">
             <img src="/pfp/quickdraw.png" alt="New Jersey Lottery Logo">
-            <span class="balls"> Fast Play </span>
+            <span class="balls"> Quick Draw</span>
           </a>
          
         </div>
