--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -22,7 +22,7 @@
   <header>
     <div class="header-top">
       <a href="/index.html">
-        <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+        <img src="\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
       </a>
       <div class="hours-info">
         <p><strong>Store Hours:</strong></p>
