alrighty done for today

--- a/bus/bus-tickets.html
+++ b/bus/bus-tickets.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <div class="header-top">
-            <img src="pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+            <img src="\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
                 <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
@@ -49,7 +49,7 @@
         <section class="bus-tickets-section">
             <div class="bus-tickets-header">
                 <h1>Your Gateway to Hassle-Free Travel</h1>
-                <p>Madison Variety has been the most convenient stop at providing our customers with transit tickets for the last 30+ years!</p>
+                <p>Madison Variety has been the most convenient stop for our loyal customers, providing them with transit tickets for the last 30+ years!</p>
             </div>
 
             <div class="bus-ticket-info">
@@ -67,7 +67,7 @@
                 <div class="company-links">
                     <div class="company-item">
                         <a href="https://www.njtransit.com/" target="_blank">
-                            <img src="nj-transit-logo.png" alt="NJ Transit Logo">
+                            <img src="\pfp\images-removebg-preview (1).png" alt="NJ Transit Logo">
                             <span>NJ Transit</span>
                         </a>
                     </div>
