--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <div class="header-top">
-            <a href="/index.html">
-                <img src="/pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+            <a href="\index.html">
+                <img src="\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
@@ -40,9 +40,9 @@
         </div>
         <header>
             <nav class="text-nav">
-                <a href="our-story.html" class="nav-item">Our Story</a>
+                <a href="/our-story.html" class="nav-item">Our Story</a>
                 <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-                <a href="/lottery/lottery.html" class="nav-item">Lottery</a>
+                <a href="lottery\lottery.html" class="nav-item">Lottery</a>
                 <a href="work-supplies.html" class="nav-item">Work Supplies</a>
                 <a href="social-area.html" class="nav-item">Social Area</a>
                 <a href="snacks.html" class="nav-item">Snacks</a>
