--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="header-top">
-                <img src="\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+                <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
                 <div class="hours-info">
                     <p><strong>Store Hours:</strong></p>
                     <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
