--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -58,20 +58,20 @@
 
         <div class="timeline">
             <div class="timeline-item">
-                <img src="/pfp/madison variety.png" alt="Madison Variety in 1980">
+                <img src="\pfp\madison variety.png" alt="Madison Variety in 1980">
                 <h3>1976</h3>
                 <p>Madison Variety first opened its doors, originally at <a href="https://maps.app.goo.gl/2qhaExNmzNM9ZwaJ8" target="_blank">2500 Route 9 South, Old Bridge</a>, now an AutoZone!</p>
 
             </div>
 
             <div class="timeline-item">
-                <img src="/pfp/kids.jpg" alt="Madison Variety in 1995">
+                <img src="\pfp\kids.jpg" alt="Madison Variety in 1995">
                 <h3>1996</h3>
                 <p>We moved to our current location at <a href="https://maps.app.goo.gl/Wj5Vc1TBNg3GRHPy9" target="_blank">3062 US-9, Old Bridge, NJ 08857</a>. Starting a new chapter in our journey.</a></p>
             </div>
 
             <div class="timeline-item">
-                <img src="/pfp/dream.png" alt="Madison Variety in 2010">
+                <img src="\pfp\dream.png" alt="Madison Variety in 2010">
                 <h3>2008</h3>
                 <p>Edward’s daughter-in-law, Galit, took over the store next door and transformed it into Dream Dresses, a boutique specializing in elegant gowns for proms, weddings, and special occasions. <p>
             </div>
