--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -40,9 +40,9 @@
         </div>
         <header>
             <nav class="text-nav">
-                <<a href="ourstory/ourstory.html" class="nav-item">Our Story</a>
+                <<a href="ourstory\ourstory.html" class="nav-item">Our Story</a>
                 <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-                <a href="lottery/lottery.html" class="nav-item">Lottery</a>
+                <a href="lottery\lottery.html" class="nav-item">Lottery</a>
                 <a href="work-supplies.html" class="nav-item">Work Supplies</a>
                 <a href="social-area.html" class="nav-item">Social Area</a>
                 <a href="snacks.html" class="nav-item">Snacks</a>
@@ -94,7 +94,7 @@
                     <p>Eventually, Gabe Rosenstraus took the reins, carrying on his father’s vision and ensuring that the store continued to serve Freehold with the same warmth and reliability that had defined it from the start. We’re proud of our journey and grateful for the continued support of our community. As we look to the future, we remain committed to serving Freehold with the same dedication and variety that has made Madison Variety a part of local history for generations.</p>
                 </div>
                 <div class="image-container">
-                    <img src="/pfp/rosenstraus.jpg" alt="The Rosenstraus Family">
+                    <img src="\pfp\rosenstraus.jpg" alt="The Rosenstraus Family">
                     <p class="caption">The Rosenstraus Family, founders of Madison Variety</p>
                 </div>
             </div>
