--- a/index.html
+++ b/index.html
@@ -180,6 +180,6 @@
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
     </footer>
-    <script src="/lottery/lottery.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
