--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -21,7 +21,7 @@
     <header>
         <div class="header-top">
             <a href="\index.html">
-                <img src="\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+                <img src="../pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
@@ -40,7 +40,7 @@
         </div>
         <header>
             <nav class="text-nav">
-                <<a href="ourstory\ourstory.html" class="nav-item">Our Story</a>
+                <a href="ourstory.html" class="nav-item">Our Story</a>
                 <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
                 <a href="lottery\lottery.html" class="nav-item">Lottery</a>
                 <a href="work-supplies.html" class="nav-item">Work Supplies</a>
