--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -100,7 +100,7 @@
             </div>
         </section>
     </main>
-    <script src="/lottery/lottery.js"></script>
+    <script src="../script.js"></script>
 
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
