--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -7,7 +7,7 @@
   <title>Lottery - Madison Variety</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-  <link rel="stylesheet" href="lottery.css">
+  <link rel="stylesheet" href="../lottery/lottery.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
